# spin_simulator

./: .gitignore  README.md  pyproject.toml
.github/agents/: spin-simulator.agent.md
.github/instructions/: spin-sim-python.instructions.md  spin-sim-web.instructions.md
.github/workflows/: deploy-pages.yml
notebooks/: demo.ipynb
src/spin_sim/: __init__.py  device.py  electrostatics.py  noise.py  spin.py
src/spin_sim/experiments/: charge_stability.py  ramsey.py  rb.py
web/: index.html  package-lock.json  package.json  tsconfig.json  tsconfig.worker.json  vite.config.ts
web/public/: manifest.json  sw.js
web/src/: App.tsx
web/src/components/: DeviceSchematic.tsx  EnergyTrace.tsx  ExperimentPanel.tsx  GateSliders.tsx  PlotCanvas.tsx  StabilityMap.tsx
web/src/hooks/: useSimulator.ts
web/src/python/spin_sim/: cliffords.py  device.py  electrostatics.py  plotting.py
web/src/python/spin_sim/experiments/: rabi.py
web/src/worker/: pyodide-worker.ts  types.ts
